# terman

./: .gitignore  Cargo.toml  README.md  flatten.py
src/: lib.rs  macros.rs  main.rs
src/ansi/: attributes.rs  charset.rs  color.rs  handler.rs  mod.rs  processor.rs  renderer.rs  sgr.rs
src/grid/: cell.rs  iter.rs  line.rs  mod.rs
src/pty/: mod.rs  split.rs
src/screen/: mod.rs  renderer.rs
src/term/: futures.rs  mod.rs  processor.rs  task.rs  terminal.rs
src/util/: mod.rs  point.rs
