[package]
name = "terman"
version = "0.1.0"
authors = ["petercp"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.12.3"
bitflags = "1"
bytes = "0.5.6"
flagset = "0.3.0"
futures = { version = "0.3.5", features = ["bilock", "unstable"] }
libc = "0.2"
log = "0.4"
mio = "0.6.22"
nix = "0.18.0"
pty = "0.2"
simple-logging = "2.0.2"
termios = "0.2.0"
tokio = { version = "0.2.22", features = ["full"] }
vte = "0.8.0"
