[package]
name = "terman"
version = "0.1.0"
authors = ["petercp"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13"
bitflags = "1.3"
bytes = "1.1.0"
flagset = "0.4.2"
futures = { version = "0.3", features = ["bilock", "unstable"] }
libc = "0.2"
log = "0.4"
mio = "0.7"
pty = "0.2"
simple-logging = "2.0"
termios = "0.3"
tokio = { version = "1.12", features = ["full"] }
vte = "0.10"
